# SkyMonitor

./: CMakeLists.txt  README.md  main.cpp  mainwindow.h  mainwindow.ui  token.txt
